# ctx-rust

./: .ctxconfig  .gitignore  Cargo.toml  README.md
.ctx-codegraph/: codegraph.sqlite
crates/ctx-cli/: Cargo.toml
crates/ctx-cli/src/: main.rs  tier.rs
crates/ctx-cli/src/cli/: help_text.rs  mod.rs  style.rs
crates/ctx-cli/src/ui/: mod.rs  progress.rs  terminal.rs  theme.rs
crates/ctx-cli/tests/: cli_tests.rs  graph_cli_tests.rs
crates/ctx-codegraph/: Cargo.toml  README.md
crates/ctx-codegraph-chunk/: Cargo.toml
crates/ctx-codegraph-chunk/src/: builder.rs  lib.rs  model.rs  text.rs
crates/ctx-codegraph-chunk/tests/: chunk_tests.rs
crates/ctx-codegraph-dense/: Cargo.toml
crates/ctx-codegraph-dense/src/: lib.rs
crates/ctx-codegraph-lang/: Cargo.toml
crates/ctx-codegraph-lang/src/: discovery.rs  error.rs  index.rs  lib.rs  model.rs  noop.rs
crates/ctx-codegraph-lang/src/backend/: mod.rs  registry.rs  traits.rs
crates/ctx-codegraph-lang/src/pipeline/: balanced.rs  fast.rs  full.rs  mod.rs
crates/ctx-codegraph-lang/tests/: noop_resolution_tests.rs  registry_tests.rs
crates/ctx-codegraph-lexical/: Cargo.toml
crates/ctx-codegraph-lexical/src/: lib.rs
crates/ctx-codegraph-models/: Cargo.toml
crates/ctx-codegraph-models/src/: embedding.rs  error.rs  execution_provider.rs  fingerprint.rs  lib.rs  paths.rs  reranker.rs  tokenizer.rs
crates/ctx-codegraph-models/tests/: models_integration.rs
crates/ctx-codegraph-resolver/: Cargo.toml
crates/ctx-codegraph-resolver/src/: lib.rs  lsp_definition.rs  lsp_transport.rs  resolver_tests.rs
crates/ctx-codegraph-resolver/tests/: resolver_tests.rs
crates/ctx-codegraph-search/: Cargo.toml
crates/ctx-codegraph-search/src/: hybrid.rs  lib.rs  rrf.rs  traits.rs
crates/ctx-codegraph-search/tests/: hybrid_tests.rs  rrf_tests.rs
crates/ctx-codegraph-storage/: Cargo.toml
crates/ctx-codegraph-storage/src/: discovery.rs  error.rs  hybrid.rs  index.rs  lib.rs  registry.rs  resolver.rs  service.rs  storage.rs
crates/ctx-codegraph-storage/src/backend/: mod.rs  registry.rs  traits.rs
crates/ctx-codegraph-storage/src/languages/: mock.rs  mod.rs
crates/ctx-codegraph-storage/src/languages/python/: parser.rs  parser_tests.rs  resolver_tests.rs
crates/ctx-codegraph-storage/src/languages/rust/: mod.rs  parser.rs  parser_tests.rs
crates/ctx-codegraph-storage/src/resolver/: mod.rs
crates/ctx-codegraph-storage/src/storage/: mod.rs  persist.rs  rebuild.rs  schema.rs  workspace.rs
crates/ctx-codegraph-storage/src/storage/query/: spans.rs  symbols.rs
crates/ctx-codegraph-storage/tests/: hybrid_tests.rs  index_wrapper_tests.rs  integration_tests.rs  registry_tests.rs  storage_wrapper_tests.rs
crates/ctx-codegraph-store/: Cargo.toml
crates/ctx-codegraph-store/src/: lib.rs  test_fixtures.rs
crates/ctx-codegraph-store/src/storage/: chunks.rs  compat.rs  diff.rs  export.rs  metrics.rs  mod.rs  persist.rs  rebuild.rs  schema.rs  search_build.rs  workspace.rs
crates/ctx-codegraph-store/src/storage/query/: edges.rs  spans.rs  symbols.rs
crates/ctx-codegraph-store/tests/: chunks_tests.rs  index_storage_tests.rs  search_build_tests.rs
crates/ctx-codegraph-store/tests/common/: mod.rs
crates/ctx-codegraph/docs/: codegraph-backend-architecture.md  graph-context-queries.md
crates/ctx-codegraph/docs/adr/: 0001-language-backend-boundary.md
crates/ctx-codegraph/src/: context.rs  error.rs  hybrid_service.rs  index.rs  lib.rs  mcp.rs  model.rs  service.rs  slice.rs  storage.rs
crates/ctx-codegraph/src/backend/: mod.rs  registry.rs  traits.rs
crates/ctx-codegraph/src/context/: hybrid_retrieval.rs  mod.rs  packing.rs  ranking.rs  retrieval.rs  roots.rs  text.rs  types.rs
crates/ctx-codegraph/src/languages/: mock.rs  mod.rs  rust.rs
crates/ctx-codegraph/src/languages/python/: mod.rs  parser.rs  parser_tests.rs  resolver.rs
crates/ctx-codegraph/src/languages/rust/: mod.rs  parser.rs  resolver.rs
crates/ctx-codegraph/src/mcp/: mod.rs  prompts.rs  protocol.rs  render.rs  resources.rs  server.rs  tools.rs
crates/ctx-codegraph/src/resolver/: lsp_transport.rs  mod.rs  noop.rs  rust_analyzer_lsp.rs
crates/ctx-codegraph/src/storage/: compat.rs  diff.rs  mod.rs  persist.rs  rebuild.rs  workspace.rs
crates/ctx-codegraph/src/storage/query/: edges.rs  mod.rs  spans.rs  symbols.rs
crates/ctx-codegraph/tests/: codegraph_integration.rs  context_retrieval_tests.rs  context_unit_tests.rs  integration_tests.rs  mcp_coverage_tests.rs  mcp_error_tests.rs  mcp_tests.rs  tests.rs
crates/ctx-codegraph/tests/common/: mod.rs
crates/ctx-config/: Cargo.toml
crates/ctx-config/src/: lib.rs
crates/ctx-config/tests/: config_tests.rs
crates/ctx-core/: Cargo.toml
crates/ctx-core/src/: error.rs  ignore.rs  kind.rs  lib.rs  scan.rs  summary.rs  tree_builder.rs  walk.rs
crates/ctx-core/tests/: scan_edge_cases.rs  scan_modes.rs  scan_summary.rs
crates/ctx-dto/: Cargo.toml
crates/ctx-dto/src/: lib.rs
crates/ctx-filter/: Cargo.toml
crates/ctx-filter/src/: engine.rs  entry.rs  lib.rs  rule.rs
crates/ctx-filter/tests/: filter_edge_cases.rs  filter_rules.rs
crates/ctx-health/: Cargo.toml
crates/ctx-health/src/: lib.rs
crates/ctx-lang-python/: Cargo.toml
crates/ctx-lang-python/src/: lib.rs  parser.rs  parser_tests.rs  resolver_tests.rs
crates/ctx-lang-python/tests/: parser_tests.rs
crates/ctx-lang-rust/: Cargo.toml
crates/ctx-lang-rust/src/: lib.rs  parser.rs  parser_tests.rs
crates/ctx-llm/: Cargo.toml
crates/ctx-mcp/: Cargo.toml
crates/ctx-mcp/src/: lib.rs  prompts.rs  protocol.rs  render.rs  resources.rs  server.rs  tools.rs
crates/ctx-models/: Cargo.toml
crates/ctx-render/: Cargo.toml
crates/ctx-stats/: Cargo.toml
crates/ctx-test/: Cargo.toml
crates/ctx-tui/: Cargo.toml
crates/ctx-tui/src/: app.rs  clipboard.rs  error.rs  events.rs  legacy_menu.rs  lib.rs  preview.rs  search.rs  settings.rs  terminal.rs  ui.rs
crates/ctx-tui/tests/: tui_tests.rs
docs/: hybrid-search.md
examples/mcp/: claude-desktop-config.json  cursor-mcp.json
run/.ctx-codegraph/: codegraph.sqlite
(+16 files in other folders)
