[workspace]
members = [
    "crates/ctx-cli",
    "crates/ctx-core",
    "crates/ctx-filter",
    "crates/ctx-stats",
    "crates/ctx-render",
    "crates/ctx-config",
    "crates/ctx-tui",
    "crates/ctx-llm",
    "crates/ctx-models",
    "crates/ctx-test",
    "crates/ctx-dto",
    "crates/ctx-codegraph-chunk",
    "crates/ctx-codegraph-lang",
    "crates/ctx-codegraph-storage",
    "crates/ctx-codegraph-store",
    "crates/ctx-codegraph-resolver",
    "crates/ctx-lang-rust",
    "crates/ctx-lang-python",
    "crates/ctx-codegraph-search",
    "crates/ctx-codegraph-models",
    "crates/ctx-codegraph-lexical",
    "crates/ctx-codegraph-dense",
    "crates/ctx-mcp",
    "crates/ctx-codegraph",
    "crates/ctx-health",
]
resolver = "2"

[profile.dev]
debug = 1 

[profile.dev.package."*"]
opt-level = 0
debug = 0
