[package]
name = "ctx-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctx-core = { path = "../ctx-core" }
ctx-render = { path = "../ctx-render" }
ctx-models = { path = "../ctx-models" }
ctx-tui = { path = "../ctx-tui" }
ctx-config = { path = "../ctx-config" }
arboard = { version = "3.6.1", default-features = false }
ctx-codegraph = { path = "../ctx-codegraph" }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

