[package]
name = "ctx-codegraph-dense"
version = "0.1.0"
edition = "2024"

[dependencies]
ctx-codegraph-chunk = { path = "../ctx-codegraph-chunk" }
ctx-codegraph-models = { path = "../ctx-codegraph-models" }
lancedb = "0.30"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
arrow = "58"
arrow-array = "58"
thiserror = "2"

[dev-dependencies]
tempfile = "3"