[package]
name = "ctx-codegraph-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
ctx-codegraph-models = { path = "../ctx-codegraph-models" }
ctx-config = { path = "../ctx-config" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
walkdir = "2"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"