[package]
name = "ctx-codegraph-models"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "coreml"] }
tokenizers = "0.21"
sha2 = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"