[package]
name = "ctx-codegraph-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
walkdir = "2"
sha2 = "0.10"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
