[package]
name = "ctx-codegraph-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
ctx-codegraph-lang = { path = "../ctx-codegraph-lang" }
ctx-codegraph-store = { path = "../ctx-codegraph-store" }
ctx-codegraph-resolver = { path = "../ctx-codegraph-resolver" }
ctx-codegraph-chunk = { path = "../ctx-codegraph-chunk" }
ctx-codegraph-search = { path = "../ctx-codegraph-search" }
ctx-codegraph-lexical = { path = "../ctx-codegraph-lexical" }
ctx-codegraph-dense = { path = "../ctx-codegraph-dense" }
ctx-codegraph-models = { path = "../ctx-codegraph-models" }
ctx-config = { path = "../ctx-config" }
ctx-lang-rust = { path = "../ctx-lang-rust" }
ctx-lang-python = { path = "../ctx-lang-python" }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"