[package]
name = "ctx-codegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ctx-codegraph-storage = { path = "../ctx-codegraph-storage" }

[dev-dependencies]
tempfile = "3"
ctx-mcp = { path = "../ctx-mcp" }
serde_json = "1"
