[package]
name = "ctx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4"
thiserror = "2"
ctx-models = { path = "../ctx-models" }
ctx-filter = { path = "../ctx-filter" }
ctx-stats = { path = "../ctx-stats" }
ctx-test = { path = "../ctx-test" }

[dev-dependencies]
tempfile = "3"

