[package]
name = "ctx-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctx-core = { path = "../ctx-core" }
ctx-render = { path = "../ctx-render" }
ctx-config = { path = "../ctx-config" }
ctx-models = { path = "../ctx-models" }
ctx-dto = { path = "../ctx-dto" }
ctx-codegraph = { path = "../ctx-codegraph" }

[dev-dependencies]
tempfile = "3"
