[package]
name = "ctx-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ctx-models = { path = "../ctx-models" }
ctx-core = { path = "../ctx-core" }
ctx-render = { path = "../ctx-render" }
ctx-test = { path = "../ctx-test" }
ctx-codegraph = { path = "../ctx-codegraph" }
ctx-config = { path = "../ctx-config" }
arboard = { version = "3.6.1", default-features = false }
ratatui = "0.26"
crossterm = "0.27"
thiserror = "2"

